# chss

./: .clang-format  .gitignore  CMakeLists.txt  README.md
chess/: Board.h  Board_test.cpp  CMakeLists.txt  DebugUtils.cpp  DebugUtils.h  DebugUtils_test.cpp  Evaluation.h  Evaluation_test.cpp  Fen.cpp  Fen.h  Fen_test.cpp  MinMax.cpp  MinMax.h  MinMax_test.cpp  Move.h  Movements.cpp  Movements.h  Movements_test.cpp  Perft.cpp  Perft.h  Perft_test.cpp  Piece.h  PieceMovements.cpp  PieceMovements.h  PieceMovementsSpecialCases.h  PieceMovements_test.cpp  Piece_test.cpp  State.h  TaskQueue.cpp  TaskQueue.h  TaskQueue_test.cpp  UCI.cpp  chess.cpp
chess/evaluation/: CMakeLists.txt  Evaluation.h  Evaluation_test.cpp
chess/fen/: CMakeLists.txt  Fen.h  Fen_test.cpp
chess/move_generation/: CMakeLists.txt  IsInCheck.h  IsInCheck_test.cpp  LegalMoves.h  LegalMoves_test.cpp  MakeMove.h  MakeMove_test.cpp  Moves.h  Moves_test.cpp  PseudoLegalMoves.h  PseudoLegalMoves_test.cpp
chess/move_generation/pieces/: CMakeLists.txt  KingMoves.h  KingMoves_test.cpp  KnightMoves.h  KnightMoves_test.cpp  PawnMoves.h  PawnMoves_test.cpp  SlidingPieceMoves.h  SlidingPieceMoves_test.cpp
chess/representation/: CMakeLists.txt  Move.h  Piece_test.cpp  State.h
chess/uci/: CMakeLists.txt  UCI.cpp  UCI.h
concurrency/: CMakeLists.txt  TaskQueue.cpp  TaskQueue.h  TaskQueue_test.cpp  ThreadSafeQueue.h  ThreadSafeQueue_test.cpp  tests_main.cpp
cpp_utils/: CMakeLists.txt  Overloaded.h
file_utils/: CMakeLists.txt  FileUtils.h
matrix/: CMakeLists.txt  Matrix2D.h  Matrix2D_test.cpp  tests_main.cpp
test_utils/: CMakeLists.txt  TestUtils.h  TestUtils_test.cpp  tests_main.cpp
